--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-resolve": "^1.0.3",
     "react-router": "^3.0.2",
     "react-router-dom": "next",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
+    "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
