--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-highlight": "^0.9.0",
+    "react-json-inspector": "^7.0.0",
     "react-redux": "^5.0.2",
     "react-resolve": "^1.0.3",
     "react-router": "^3.0.2",
