--- a/app/package.json
+++ b/app/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "node-sass": "^4.5.0",
+    "npm-run-all": "^4.0.1",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "@treora/scroll-into-view": "^0.1.0",
+    "highlight.js": "^9.9.0",
+    "history": "^4.5.1",
     "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-highlight": "^0.9.0",
     "react-json-inspector": "^7.0.0",
     "react-redux": "^5.0.2",
-    "react-resolve": "^1.0.3",
-    "react-router": "^3.0.2",
+    "react-router": "next",
     "react-router-dom": "next",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "smoothscroll-polyfill": "^0.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass src/ -o src/",
+    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "build-js": "react-scripts build",
+    "start": "run-p watch-css start-js",
+    "build": "run-s build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
